# gloomy

./: .ccls  .clang  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
glad/: CMakeLists.txt
glad/include/glad/: glad.h  glad.hpp
glad/src/: glad.c  glad.cpp
gloomy/: CMakeLists.txt
gloomy/include/glad/: glad.h
gloomy/include/gloomy/: API.hpp  Attribute.hpp  Primitive.hpp  TypeAliases.hpp  Vertex.hpp  gl.hpp  gloomy.hpp
gloomy/include/gloomy/Conversion/: Enum.hpp
gloomy/include/gloomy/Enum/: BufferBit.hpp  Capability.hpp  Error.hpp  PrimitiveKind.hpp  Type.hpp
gloomy/include/gloomy/Enum/Buffer/: IndexType.hpp  Kind.hpp  Usage.hpp
gloomy/include/gloomy/Enum/Framebuffer/: Attachment.hpp  Status.hpp  Target.hpp  TextureTarget.hpp
gloomy/include/gloomy/Enum/Renderbuffer/: InternalFormat.hpp  Target.hpp
gloomy/include/gloomy/Enum/Shader/: Kind.hpp
gloomy/include/gloomy/Enum/Texture/: CompareMode.hpp  ComparisonFunction.hpp  InternalFormat.hpp  Kind.hpp  MagFilter.hpp  MinFilter.hpp  ParameterName.hpp  PixelDataType.hpp  PixelFormat.hpp  Target.hpp
gloomy/include/gloomy/GL/: API.hpp
gloomy/include/gloomy/GL/Raw/: API.hpp  Enum.hpp
gloomy/include/gloomy/Objects/: Bindable.hpp  Buffer.hpp  Committable.hpp  Framebuffer.hpp  ID.hpp  Object.hpp  Program.hpp  Renderbuffer.hpp  Shader.hpp  Texture2D.hpp  Uniform.hpp  UniformLocation.hpp  VertexArray.hpp
gloomy/include/gloomy/Sources/: BufferView.hpp  Image.hpp  Shader.hpp
gloomy/include/gloomy/Utilities/: BitMask.hpp  ByteSpan.hpp  CopyOnWrite.hpp  Distinct.hpp  DynamicArray.hpp  Newtype.hpp  NonCopyable.hpp  Span.hpp  Tuple.hpp  TypeList.hpp
gloomy/include/nonstd/: expected.hpp  span.hpp
gloomy/src/: Image.cpp  gloomy.cpp
gloomy/src/Objects/: Framebuffer.cpp  Program.cpp  Renderbuffer.cpp  Texture2D.cpp  VertexArray.cpp
learnopengl/: CMakeLists.txt
learnopengl/getting_started/: CMakeLists.txt
learnopengl/getting_started/camera/: CMakeLists.txt
learnopengl/getting_started/coordinate_systems/: CMakeLists.txt
learnopengl/getting_started/hello_triangle/: CMakeLists.txt
learnopengl/getting_started/hello_triangle/include/learnopengl/: glfw_context.hpp
learnopengl/getting_started/hello_triangle/src/: main.cpp
learnopengl/getting_started/shaders/: CMakeLists.txt
learnopengl/getting_started/shaders/assets/shaders/: VertexShader.hlsl
learnopengl/getting_started/shaders/include/learnopengl/: learnopengl.hpp  resources.hpp
learnopengl/getting_started/shaders/src/: main.cpp
learnopengl/getting_started/textures/: CMakeLists.txt
learnopengl/getting_started/textures/include/learnopengl/: learnopengl.hpp  resources.hpp
learnopengl/getting_started/textures/src/: main.cpp
learnopengl/getting_started/transformations/: CMakeLists.txt
learnopengl/getting_started/transformations/src/: main.cpp
learnopengl/stb/: CMakeLists.txt
learnopengl/stb/include/stb/: stb_image.hpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: FragmentShader.hlsl  VertexShader.hlsl
sandbox/include/sandbox/: glfw_context.hpp
sandbox/src/: main.cpp
stb/: CMakeLists.txt
